--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,14 +23,7 @@
     "import/no-default-export": "error",
 
     // allow {} even though it's unsafe but comes handy
-    "@typescript-eslint/ban-types": [
-      "error",
-      {
-        "types": {
-          "{}": false
-        }
-      }
-    ],
+    "@typescript-eslint/no-empty-object-type": "off",
 
     "@typescript-eslint/consistent-type-imports": [
       "error",
